# apart_aixbio

./: .env.example  CLAUDE.md  README.md  debugging.md  main.py  plot_options.py  pyproject.toml  template.md  test_serde.py
aixbio/: __main__.py  config.py
aixbio/graph/: chain_subgraph.py  main_graph.py
aixbio/models/: __init__.py  audit.py  dna.py  plasmid.py  protein.py  remediation.py  structure.py  synthesis.py  validation.py
aixbio/nodes/: cassette_assembly.py  codon_optimization.py  human_checkpoints.py  merge_results.py  plasmid_assembly.py  remediation_agent.py  routers.py  sequence_retrieval.py  sequence_validation.py  structural_validation.py
aixbio/prompts/: remediation.py  sequence_retrieval.py
aixbio/state/: chain_state.py  pipeline_state.py
aixbio/tools/: alphafold.py  cai.py  codon_tables.py  evo2.py  gc.py  genbank.py  output_card.py  restriction_sites.py  rna_fold.py  synthesis_feasibility.py  uniprot.py  visualizations.py
output/: Insulin_P01308.fasta  Insulin_P01308_peptides.tsv  Insulin_P01308_plasmid.gb  P01308_summary.json  log.txt  output_card.html  protocol.md  synthesis_report.txt
scripts/: visualize_structure.py
tests/: test_chain_subgraph.py  test_deterministic_nodes.py  test_evo2.py  test_models.py  test_tools.py
